--- a/js/index.html
+++ b/js/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="form">
-        <h3>Confira o clima de uma cidade!!</h3>
+        <h3>Clima</h3>
         <div class="form-input-container">
           <input type="text" placeholder="Digite o nome da cidade" id="city"/>
           <button id="search">
@@ -61,6 +61,12 @@
             <span></span>
           </p>
         </div>
+      </div>
+      <div id="error-message" class="hide">
+        <p>Digite a cidade corretamente.</p>
+      </div>
+      <div id="loading" class="hide">
+        <i class="fa-solid fa-snowflake" style="color: #17d4ee;"></i>
       </div>
     </div>
   </body>
