--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="form">
-        <h3>Clima</h3>
+        <h3>Confira o clima da sua cidade.</h3>
         <div class="form-input-container">
           <input type="text" placeholder="Digite o nome da cidade" id="city"/>
           <button id="search">
